@@ -5,7 +5,7 @@ import org.apereo.cas.DefaultMessageDescriptor;
 import lombok.val;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -21,8 +21,8 @@ public class DefaultPasswordPolicyHandlingStrategyTests {
     public void verifyOperation() throws Exception {
         val s = new DefaultPasswordPolicyHandlingStrategy<Object>();
         assertTrue(s.handle(new Object(), null).isEmpty());
-        val cfg = new PasswordPolicyConfiguration(30);
-        cfg.setAccountStateHandler((o, o2) -> Collections.singletonList(new DefaultMessageDescriptor("bad.password")));
+        val cfg = new PasswordPolicyContext(30);
+        cfg.setAccountStateHandler((o, o2) -> List.of(new DefaultMessageDescriptor("bad.password")));
         assertFalse(s.handle(new Object(), cfg).isEmpty());
     }
 }
