@@ -3,6 +3,7 @@ package org.apereo.cas.services;
 import org.apereo.cas.CoreAttributesTestUtils;
 import org.apereo.cas.authentication.principal.DefaultPrincipalFactory;
 import org.apereo.cas.authentication.principal.Principal;
+import org.apereo.cas.authentication.principal.Service;
 import org.apereo.cas.authentication.principal.cache.CachingPrincipalAttributesRepository;
 import org.apereo.cas.config.CasCoreUtilConfiguration;
 import org.apereo.cas.util.CollectionUtils;
@@ -16,6 +17,7 @@ import org.apereo.services.persondir.support.MergingPersonAttributeDaoImpl;
 import org.apereo.services.persondir.support.StubPersonAttributeDao;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
 import org.springframework.context.ConfigurableApplicationContext;
@@ -25,6 +27,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
@@ -39,7 +42,12 @@ import static org.mockito.Mockito.*;
  */
 @SpringBootTest(classes = {
     RefreshAutoConfiguration.class,
+    MailSenderAutoConfiguration.class,
     CasCoreUtilConfiguration.class
+}, properties = {
+    "spring.mail.host=localhost",
+    "spring.mail.port=25000",
+    "spring.mail.testConnection=false"
 })
 public class RegisteredServiceAttributeReleasePolicyTests {
 
@@ -204,7 +212,7 @@ public class RegisteredServiceAttributeReleasePolicyTests {
         stub.setId("SampleStubRepository");
 
         val dao = new MergingPersonAttributeDaoImpl();
-        dao.setPersonAttributeDaos(Collections.singletonList(stub));
+        dao.setPersonAttributeDaos(List.of(stub));
 
         ApplicationContextProvider.registerBeanIntoApplicationContext(this.applicationContext, dao, "attributeRepository");
 
@@ -237,7 +245,7 @@ public class RegisteredServiceAttributeReleasePolicyTests {
         stub.setId("SampleStubRepository");
 
         val dao = new MergingPersonAttributeDaoImpl();
-        dao.setPersonAttributeDaos(Collections.singletonList(stub));
+        dao.setPersonAttributeDaos(List.of(stub));
 
         ApplicationContextProvider.registerBeanIntoApplicationContext(this.applicationContext, dao, "attributeRepository");
         val repository = new CachingPrincipalAttributesRepository(TimeUnit.MILLISECONDS.name(), 0);
@@ -252,5 +260,27 @@ public class RegisteredServiceAttributeReleasePolicyTests {
         policy.setPrincipalAttributesRepository(repository);
         attr = policy.getAttributes(p, CoreAttributesTestUtils.getService(), CoreAttributesTestUtils.getRegisteredService());
         assertEquals(1, attr.size());
+    }
+
+    @Test
+    public void verifyDefaults() {
+        val policy = new RegisteredServiceAttributeReleasePolicy() {
+            private static final long serialVersionUID = 6118477243447737445L;
+
+            @Override
+            public Map<String, List<Object>> getAttributes(final Principal p, final Service selectedService, final RegisteredService service) {
+                return p.getAttributes();
+            }
+        };
+        assertNull(policy.getConsentPolicy());
+        assertNull(policy.getPrincipalAttributesRepository());
+        assertTrue(policy.isAuthorizedToReleaseAuthenticationAttributes());
+        assertFalse(policy.isAuthorizedToReleaseCredentialPassword());
+        assertFalse(policy.isAuthorizedToReleaseProxyGrantingTicket());
+
+        val p = new DefaultPrincipalFactory().createPrincipal("uid", Collections.singletonMap("mail", List.of("final@example.com")));
+        val attrs = policy.getConsentableAttributes(p, CoreAttributesTestUtils.getService(), CoreAttributesTestUtils.getRegisteredService());
+        assertEquals(p.getAttributes(), attrs);
+
     }
 }
