@@ -17,9 +17,10 @@ import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.test.annotation.DirtiesContext;
 
 import javax.security.auth.login.FailedLoginException;
-import java.util.Collections;
+
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
@@ -106,14 +107,14 @@ public class PolicyBasedAuthenticationManagerTests {
         val auth = manager.authenticate(transaction);
         assertEquals(1, auth.getSuccesses().size());
         assertEquals(1, auth.getFailures().size());
-        assertEquals(2, auth.getCredentials().size());
+        assertEquals(2, map.size());
     }
 
     protected static ServicesManager mockServicesManager() {
         val svc = mock(ServicesManager.class);
         val reg = CoreAuthenticationTestUtils.getRegisteredService();
         when(svc.findServiceBy(any(Service.class))).thenReturn(reg);
-        when(svc.getAllServices()).thenReturn(Collections.singletonList(reg));
+        when(svc.getAllServices()).thenReturn(List.of(reg));
         return svc;
     }
 
